# ArchNeuronX

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
config/: default.json  development.json
include/core/: base_model.hpp  config.hpp  logger.hpp  trading_engine.h
include/data/: binance_provider.hpp  data_manager.hpp  data_preprocessor.hpp  data_processor.h  data_provider.hpp  market_data.hpp  technical_indicators.hpp
include/models/: cnn_model.hpp  hybrid_model.hpp  mlp_model.hpp  model_factory.hpp  neural_networks.h  training_manager.hpp
include/trading/: signal_generator.h  trading_engine.hpp
scripts/: setup.sh
src/: main.cpp
src/core/: logger.cpp
src/data/: market_data.cpp
src/models/: mlp_model.cpp
tests/: CMakeLists.txt  test_core_infrastructure.cpp
tests/unit/: test_trading_engine.cpp
